[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scan-service"
version = "0.0.1"
authors = [
  { name="LiamLea", email="liweixiliang@gmail.com" },
]
description = "scan IT resources using ssh, snmp, wmi"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
